1/14/18 - 0.9.5 - Various bug fixes: Fix for View Requests, Manage Couch Potato, more error logging
7/09/17 - 0.9.4 - Added menu to report requests as watched, and use unicode characters to denote request status
7/09/17 - 0.9.3 - Fixed bugs with Couchpotato, Sending Email, and begin to compartamentalize code
6/02/17 - 0.9.2 - Fixed authentication locally, users will only see libraries they have access to when reporting problems.
5/02/17 - 0.9.1 - Added admin email notifcations when requests completed and ability to restrict sections for reporting media
3/24/17 - 0.9.0 - Added periodic checking for completed requests and user notifications
2/02/17 - 0.8.3 - Fixed adding movies to Radarr. Added year to movie titles during request.
2/02/17 - 0.8.2b - Fixed some bugs that came up in the last release. Merged pull request for multiple Slack Channels.
2/02/17 - 0.8.2 - Added Radarr support for adding movies.
1/28/17 - 0.8.1 - Added Slack support for notifications, fix for Pushbullet, other minor changes.
8/25/16 - 0.8.0 - Added preliminary music with Headphones support, plus numerous minor changes.
3/15/16 - 0.7.5 - Added ability to toggle between alternative input menu and default device (use if menus options don't appear)
3/14/16 - 0.7.4 - Added ability to manage CouchPotato in channel
3/09/16 - 0.7.3 - Added Dutch translation by Ruvetuve
3/05/16 - 0.7.2 - Added support for search results in different languages using TMDB and TVDB. Fix for weekly limits in some clients
3/02/16 - 0.7.1 - Added French localization. Translation done by seb972.
2/28/16 - 0.7.0 - Users can view and delete their own requests.
2/27/16 - 0.6.9 - Added support for reporting problems with specific media files with ability to navigate through library.
2/21/16 - 0.6.8b - Fixed bugs when upgrading from old versions and DumbTools.
2/19/16 - 0.6.8 - Use unique sessions for each login. Option to check admin user using plex.tv. Add Season Folder option to Sonarr.